/*
 * Copyright 2016, TeamDev Ltd. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package spine.examples.todolist;

option (type_url_prefix) = "type.spine.examples.todolist";
option java_package = "org.spine3.examples.todolist.failures";
option java_multiple_files = false;
option java_generate_equals_and_hash = true;

import "spine/annotations.proto";

import "todolist/failure/failures_dto.proto";

// Fire the failure when cannot update task description.
message CannotUpdateTaskDescription {

    // Failed the description update.
    DescriptionUpdateFailed update_failed = 1;
}

// Fire the failure when cannot update task priority.
message CannotUpdateTaskPriority {

    // Failed the priority update.
    PriorityUpdateFailed update_failed = 1;
}

// Fire the failure when cannot update task due date.
message CannotUpdateTaskDueDate {

    // Failed the due date update.
    TaskDueDateUpdateFailed update_failed = 1;
}

// Fire the failure when cannot update label details.
message CannotUpdateLabelDetails {

    //Failed the label details update.
    LabelDetailsUpdateFailed update_failed = 1;
}

message CannotCreateBasicTask {

    CreateBasicTaskFailed create_task_failed = 1;
}

message CannotCreateBasicLabel {

    CreateBasicLabelFailed create_label_failed = 1;
}

message CannotAssignLabelToTask {

    AssignLabelToTaskFailed assign_label_failed = 1;
}

message CannotRemoveLabelFromTask {

    RemoveLabelFromTaskFailed remove_label_failed = 1;
}

message CannotReopenTask {

    ReopenTaskFailed reopen_task_failed = 1;
}

message CannotDeleteTask {

    DeleteTaskFailed delete_task_failed = 1;
}

message CannotRestoreDeletedTask {

    RestoreDeletedTaskFailed restore_task_failed = 1;
}

message CannotCompleteTask {

    CompleteTaskFailed complete_task_failed = 1;
}

message CannotCreateDraft {

    CreateDraftFailed create_draft_failed = 1;
}

message CannotFinalizeDraft {

    FinalizeDraftFailed finalize_draft_failed = 1;
}

message CannotUpdateTaskWithInappropriateDescription {

    // Failed the description update.
    DescriptionUpdateFailed update_failed = 1;
}

message CannotCreateTaskWithInappropriateDescription{

    CreateBasicTaskFailed create_task_failed = 1;
}
